crates/java-syntax/src/snapshots/java_parser__lexer__tests__string_literals.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(r#\" \"hello world\" \"escape \\\" test\" \"\" \"#)"
---
[
    (
        Whitespace,
        " ",
    ),
    (
        StringLiteral,
        "\"hello world\"",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        StringLiteral,
        "\"escape \\\" test\"",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        StringLiteral,
        "\"\"",
    ),
    (
        Whitespace,
        " ",
    ),
]
