crates/java-syntax/src/snapshots/java_parser__lexer__tests__string_template_features-2.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"\\\"a \\\\{b} c \\\\{d} e\\\"\")"
---
[
    (
        StringTemplateBegin,
        "\"a \\{",
    ),
    (
        Identifier,
        "b",
    ),
    (
        StringTemplateMid,
        "} c \\{",
    ),
    (
        Identifier,
        "d",
    ),
    (
        StringTemplateEnd,
        "} e\"",
    ),
]
