crates/java-syntax/src/snapshots/java_parser__lexer__tests__string_template_features-4.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"\\\"Outer \\\\{ \\\"Inner \\\\{x}\\\" }\\\"\")"
---
[
    (
        StringTemplateBegin,
        "\"Outer \\{",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        StringTemplateBegin,
        "\"Inner \\{",
    ),
    (
        Identifier,
        "x",
    ),
    (
        StringTemplateEnd,
        "}\"",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        StringTemplateEnd,
        "}\"",
    ),
]
