crates/java-syntax/src/snapshots/java_parser__lexer__tests__string_template_features.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"STR.\\\"Hello \\\\{name}!\\\"\")"
---
[
    (
        Identifier,
        "STR",
    ),
    (
        Dot,
        ".",
    ),
    (
        StringTemplateBegin,
        "\"Hello \\{",
    ),
    (
        Identifier,
        "name",
    ),
    (
        StringTemplateEnd,
        "}!\"",
    ),
]
