crates/java-syntax/src/snapshots/java_parser__lexer__tests__text_block_template.snap
---
source: crates/java-syntax/src/lexer.rs
expression: lex_tokens(source)
---
[
    (
        TextBlockTemplateBegin,
        "\"\"\"\n  Line 1 \\{",
    ),
    (
        Identifier,
        "a",
    ),
    (
        TextBlockTemplateEnd,
        "}\n  Line 2\"\"\"",
    ),
    (
        Whitespace,
        "\n",
    ),
]
