crates/java-syntax/src/snapshots/java_parser__lexer__tests__text_blocks.snap
---
source: crates/java-syntax/src/lexer.rs
expression: lex_tokens(source)
---
[
    (
        TextBlock,
        "\"\"\"\nHello\n  World\n\"\"\"",
    ),
    (
        Whitespace,
        "\n",
    ),
]
