crates/java-syntax/src/snapshots/java_parser__lexer__tests__unicode_escape_in_strings-2.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"String s = \\\"\\\\u005C\\\\u0022\\\";\")"
---
[
    (
        Identifier,
        "String",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        Identifier,
        "s",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        Equal,
        "=",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        StringLiteral,
        "\"\\\"\"",
    ),
    (
        Semicolon,
        ";",
    ),
]
