crates/java-syntax/src/snapshots/java_parser__lexer__tests__unicode_escape_in_strings.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_errors(\"String s = \\\"\\\\u0022\\\";\")"
---
[
    UnterminatedString,
]
