crates/java-syntax/src/snapshots/java_parser__lexer__tests__unicode_escapes-3.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"char \\\\uuuu0061 = 'a';\")"
---
[
    (
        Char,
        "char",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        Identifier,
        "a",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        Equal,
        "=",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        CharLiteral,
        "'a'",
    ),
    (
        Semicolon,
        ";",
    ),
]
